# cpp-labs

./: README.md
Lab1/: CMakeLists.txt  README.md  build-lin.sh  build-win.bat  concatFiles.sh  main.cpp
Lab1/lin-builds/: task1.out  task10.out  task12.out  task14.out  task16.out  task18.out  task2.out  task20.out  task22.out  task24.out  task26.out  task28.out  task3.out  task30.out  task32.out  task34.out  task36.out  task38.out  task4.out  task40.out  task6.out  task8.out
Lab1/task1/: README.md  task1.cpp
Lab1/task10/: README.md  task10.cpp
Lab1/task12/: README.md  task12.cpp
Lab1/task14/: README.md  task14.cpp
Lab1/task16/: README.md  task16.cpp
Lab1/task18/: README.md  task18.cpp
Lab1/task2/: README.md  task2.cpp
Lab1/task20/: README.md  task20.cpp
Lab1/task22/: README.md  task22.cpp
Lab1/task24/: README.md  task24.cpp
Lab1/task26/: README.md
Lab1/task28/: README.md  task28.cpp
Lab1/task3/: README.md  task3.cpp
Lab1/task30/: README.md  task30.cpp
Lab1/task32/: README.md  task32.cpp
Lab1/task34/: README.md  task34.cpp
Lab1/task36/: README.md  task36.cpp
Lab1/task38/: README.md  task38.cpp
Lab1/task4/: README.md  task4.cpp
Lab1/task40/: README.md  task40.cpp
Lab1/task6/: README.md  task6.cpp
Lab1/task8/: README.md  task8.cpp
Lab2/: README.md  build-lin.sh  build-win.bat
Lab3/: README.md  build.sh
Lab4/: README.md  build.bat
Lab5/: README.md  build.sh
mixUtils/: CMakeLists.txt
mixUtils/include/: mixUtils.hpp
mixUtils/include/mixutils/: input.hpp  setRuLocale.hpp
mixUtils/src/: mixUtils.cpp
(+71 files in other folders)
